# iPM1D2019

./: .gitignore  1DPICMCTutorial.sln  CMakeLists.txt  LICENSE.md  README.md  cmakelists.txt
1DPICMCTutorial/: 1DPICMCTutorial.vfproj  CMakeLists.txt
1DPICMCTutorial/code/: CMakeLists.txt  EI.f90  Main.F90  OneStep.F90  OneStepEx.F90  SEE.f90
1DPICMCTutorial/code/base/: Constants.f90  ControlFlow.f90  Field.f90  FieldQN.f90  Grid.f90  Numrical.F90  ParticleBoundary.f90  ParticleBundle.f90  ParticleOne.f90  SpecyOne.f90  Vector1DX.F90  constants.mod  modulegrid.mod  numrical.mod
1DPICMCTutorial/code/diagnostics/: DiagCollisionRate.f90  DiagEEPF.f90  DiagElectrodeParticles.f90  DiagMomentum.f90  DiagOneStep.f90  DiagTestParticle.f90
1DPICMCTutorial/code/mc/: MCCChi.f90  MCCElectron.F90  MCCInit.F90  MCCIon.F90  MCCPublic.F90  MCCSigma.f90  Recombination.F90  TypeMCC.f90
1DPICMCTutorial/code/pic/: FieldBounday.F90  FieldOnStepQN.f90  FieldOnStepQN2D.f90  FieldOnStepQNEx.f90  FieldOneStep.f90  FieldOneStepEx.f90
1DPICMCTutorial/code/solver/: petscsolver.c
1DPICMCTutorial/doxygen/: Doxyfile
1DPICMCTutorial/doxygen/html/: annotated.html  classes.html  dir_050edd66366d13764f98250ef6db77f6.html  dir_20ec99a77a8842daf434235a5d61a31f.html  hierarchy.html  index.html  interfacemodulegrid_1_1_dump_grid-members.html  interfacemodulegrid_1_1_dump_grid.html  interfacemodulegrid_1_1_init_grid_base-members.html  interfacemodulegrid_1_1_rescale_grid-members.html  interfacemodulegrid_1_1_rescale_grid.html  interfacemodulegrid_1_1_reset_grid-members.html  structdiagnosticseepf_1_1particleedf.html  structdiagnosticsmomentum_1_1particlemomentumone-members.html  structdiagnosticsmomentum_1_1particlemomentumone.html  structmodulecontrolflow_1_1controlflow-members.html  structmodulecontrolflow_1_1controlflow.html  structmodulefield_1_1field-members.html  structmodulefield_1_1fieldone-members.html  structmodulefield_1_1fieldone.html  structmodulefield_1_1fieldsolver.html  structmodulefieldboundary_1_1fieldboundary.html  structmodulegrid0d1t_1_1grid0d1t.html  structmodulemccsigma_1_1sigmanormalized-members.html  structmoduleparticleboundary_1_1particleboundaryone-members.html  structmoduleparticleboundary_1_1particleboundaryone.html  structmoduleparticlebundle_1_1particlebundle-members.html  structmoduleparticlebundle_1_1particlebundle.html  structmoduleparticlebundle_1_1particlebundleindex-members.html  structmoduleparticlebundle_1_1particlebundleindex.html  structmoduleparticleone_1_1particleone.html  structmoduleparticleone_1_1particleoneindex.html  structmodulespecyone_1_1gasphysical-members.html  structmodulespecyone_1_1gasphysical.html  structmodulespecyone_1_1specyonephysical-members.html  structmoduletypemcc_1_1mccbundle.html  structmoduletypemcc_1_1mccparticleone-members.html  structmoduletypemcc_1_1mccparticleone.html  structmoduletypemcc_1_1reactionone.html
1DPICMCTutorial/doxygen/latex/: annotated.tex  interfacemodulegrid_1_1_dump_grid.tex  interfacemodulegrid_1_1_init_grid_base.tex  interfacemodulegrid_1_1_reset_grid.tex  refman.tex  structdiagnosticscollisionrate_1_1particlecollisionrate.tex  structdiagnosticsmomentum_1_1particlemomentumone.tex  structmodulecontrolflow_1_1controlflow.tex  structmodulefield_1_1field.tex  structmodulefieldboundary_1_1fieldboundary.tex  structmodulegrid0d1t_1_1grid0d1t.tex  structmodulegrid1d0t_1_1grid1d0t.eps  structmodulegrid1d0t_1_1grid1d0t.tex  (+9 more)
1DPICMCTutorial/input/: controlflow.txt  gas.txt  gas2.txt
(+106 files in other folders)
